material de segunda

--- a/exercicios/para-sala/exercicios_em_aula.ipynb
+++ b/exercicios/para-sala/exercicios_em_aula.ipynb
@@ -50,7 +50,7 @@
         "id": "iux36Dj7Q5E6",
         "outputId": "84c6def5-f47b-47a7-d5d2-290792e57271"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,7 @@
         "id": "EMGv4DqcTbCX",
         "outputId": "064d05f8-728d-4316-d417-77a47c62242c"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         "id": "e7LqDFtiWAyf",
         "outputId": "18e2984c-2c3a-47fc-fa21-3d09cbb63d99"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +162,7 @@
         "soma_quadrados_dif = sum((x - media)**2 for x in dados)\n",
         "print(soma_quadrados_dif)\n",
         "\n",
-        "variancia = soma_quadrados_dif / quantidade\n",
+        "variancia = soma_quadrados_dif / (quantidade - 1)\n",
         "print(variancia)\n",
         "\n",
         "# Passo 3 : Calcular o desvio padrão\n",
@@ -175,9 +175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "toBTZzxratHo",
-        "outputId": "cf9e84cf-ddee-4a16-8c3d-4daa972532f4"
+        "outputId": "8177a739-a837-4082-ac9c-3e8ce4a48ccd"
       },
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,8 +185,45 @@
           "text": [
             "7.75\n",
             "15.5\n",
-            "1.9375\n",
-            "Desvio padrão é 1.39\n"
+            "2.2142857142857144\n",
+            "Desvio padrão é 1.49\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "#dados\n",
+        "dados = [5, 7, 7, 8, 8, 8, 9, 10]\n",
+        "\n",
+        "#Número de observações na amostra (N)\n",
+        "N = len(dados)\n",
+        "\n",
+        "# Calculando o desvio padrão amostral\n",
+        "desvio_padrao_amostral = np.std(dados, ddof=1)\n",
+        "\n",
+        "# Exibindo o resultado\n",
+        "print(f\"Quantidade de observações (N): {N}\")\n",
+        "print(f\"Desvio padrão amostral: {desvio_padrao_amostral}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wv3-GVYCy3px",
+        "outputId": "ff0c6898-9ea9-4412-df7d-2bf200cf06c9"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Quantidade de observações (N): 8\n",
+            "Desvio padrão amostral: 1.4880476182856899\n"
           ]
         }
       ]
@@ -224,7 +261,7 @@
         "id": "76IC6mm_rFOr",
         "outputId": "d015d899-edf2-4f77-be3f-243b07b1873d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +299,7 @@
         "id": "vYfhx-kfu_oc",
         "outputId": "b41f0cf6-e464-4f2e-95c0-955557bd237d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,7 +343,7 @@
         "id": "Q_NJf6iCzxnf",
         "outputId": "c8800c4e-0f05-4641-a4a6-5ea7fdee6ce3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +381,7 @@
         "id": "0tyDUXSfPDsc",
         "outputId": "e20982ed-1ce2-4e31-bcf6-3d41cc623214"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +416,7 @@
         "id": "0x_NczWUkkgh",
         "outputId": "bc9d3c34-a91c-44f5-b064-5bd617367ba0"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +455,7 @@
         "id": "JWUcRroilAVr",
         "outputId": "4c76b47c-2896-4c03-b9b9-2a3d8a6b8a8e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,6 +463,188 @@
           "text": [
             "Estatística t é 3.590662493587658\n",
             "Valor p é 0.007077669355475713\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Teste Z"
+      ],
+      "metadata": {
+        "id": "bk3gc01E12XV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# instalação da biblioteca\n",
+        "!pip install statsmodels"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fpD1D3b11p_2",
+        "outputId": "97118bd6-2522-4ae3-c879-e5028c554f21"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: statsmodels in /usr/local/lib/python3.10/dist-packages (0.14.2)\n",
+            "Requirement already satisfied: numpy>=1.22.3 in /usr/local/lib/python3.10/dist-packages (from statsmodels) (1.26.4)\n",
+            "Requirement already satisfied: scipy!=1.9.2,>=1.8 in /usr/local/lib/python3.10/dist-packages (from statsmodels) (1.13.1)\n",
+            "Requirement already satisfied: pandas!=2.1.0,>=1.4 in /usr/local/lib/python3.10/dist-packages (from statsmodels) (2.1.4)\n",
+            "Requirement already satisfied: patsy>=0.5.6 in /usr/local/lib/python3.10/dist-packages (from statsmodels) (0.5.6)\n",
+            "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.10/dist-packages (from statsmodels) (24.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.1)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in /usr/local/lib/python3.10/dist-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from patsy>=0.5.6->statsmodels) (1.16.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#importar\n",
+        "from statsmodels.stats.proportion import proportions_ztest\n",
+        "\n",
+        "# dados\n",
+        "#tamanho da amostra\n",
+        "n = 100\n",
+        "# número de sucesso (clientes satisfeitos)\n",
+        "x = 85\n",
+        "#proporção a ser testada\n",
+        "p0 = 0.75\n",
+        "\n",
+        "# teste de hipóteses\n",
+        "# H0: A proporção é igual a p0\n",
+        "# H1: A proporção é maior que p0\n",
+        "\n",
+        "estatistica, p_valor = proportions_ztest(x, n, p0)\n",
+        "\n",
+        "#print\n",
+        "print(f\"Estatística z é {estatistica:.3f}\")\n",
+        "print(f\"Valor p é {p_valor:.3f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xLdqSiTd2Hol",
+        "outputId": "ec9a71c5-fec4-4e11-c042-b59aa03a2546"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estatística z é 2.801\n",
+            "Valor p é 0.005\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Teste Qui-quadrado"
+      ],
+      "metadata": {
+        "id": "2ezLS1lm8y0A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#importar\n",
+        "import numpy as np\n",
+        "from scipy.stats import chi2_contingency\n",
+        "\n",
+        "# dados\n",
+        "dados = np.array([[154, 30, 20],[74, 35, 25]])\n",
+        "\n",
+        "# teste de hipotese\n",
+        "# H0: Não há relação\n",
+        "# H1: Há a relação\n",
+        "\n",
+        "# Teste\n",
+        "estatistica, p_valor, grau_de_liberdade, matriz_frequencia = chi2_contingency(dados)\n",
+        "\n",
+        "print(f\"A Estatistica é {estatistica}\")\n",
+        "print(f\"Valor p é {p_valor:.3f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kr3dFztx5L7I",
+        "outputId": "17c5ccfa-7701-4b9b-da8d-0b36269a2d90"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A Estatistica é 15.163685357183805\n",
+            "Valor p é 0.001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Teste Anova"
+      ],
+      "metadata": {
+        "id": "Nhwuju_rETwz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#importar\n",
+        "from scipy.stats import f_oneway\n",
+        "\n",
+        "#Dados\n",
+        "grupo1 = [170, 172, 168, 171, 175]\n",
+        "grupo2 = [165, 168, 170, 166, 169]\n",
+        "grupo3 = [172, 175, 178, 176, 174]\n",
+        "\n",
+        "#teste hipoteses\n",
+        "#H0: A média dos grupos são iguais\n",
+        "#H1: Pelo menos uma média de altura é diferente\n",
+        "\n",
+        "# teste\n",
+        "estatistica, p_valor = f_oneway(grupo1, grupo2, grupo3)\n",
+        "\n",
+        "print(f\"Estatistica é {estatistica:.2f}\")\n",
+        "print(f\" o Valor p {p_valor:.3f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v2KpzuHHC860",
+        "outputId": "cfeeb74a-0077-4a0c-d78b-77d520d2d882"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estatistica é 12.84\n",
+            " o Valor p 0.001\n"
           ]
         }
       ]
